# MPM-CudaJax

./: .gitignore  CMakeLists.txt  Makefile  README.md  profile_nsight.py  pyproject.toml  simulate.py
.claude/: CLAUDE.md  settings.json
conf/: config.yaml  nsight_profile.yaml  nsight_profile_sweep.yaml  sweep_all.yaml  sweep_cuda_fused.yaml  sweep_cuda_v2.yaml  sweep_per_stage.yaml  sweep_profile.yaml  sweep_scaling.yaml
conf/kernel/: cuda_fused.yaml  cuda_v1_inline.yaml  cuda_v2.yaml  cuda_v2_fori_inline.yaml  cuda_v2_inline.yaml  cuda_v3_fori_inline.yaml  cuda_v3_inline.yaml  cuda_v4_inline.yaml  cuda_v6_inline.yaml  jax_v1_5.yaml  warp_bonus_graph.yaml  warp_bonus_v2_graph.yaml  warp_v1_inline.yaml  warp_v2_tile.yaml  warp_v3_supercell_tile.yaml
conf/material/: jelly_jacobi.yaml
conf/profile/: warp.yaml
docs/superpowers/plans/: 2026-03-24-pluggable-p2g-refactor.md  2026-05-19-uv-to-pixi-migration.md
docs/superpowers/specs/: 2026-03-24-refactor-pluggable-p2g-design.md  2026-05-19-uv-to-pixi-migration-design.md
mpm_jax/: __init__.py  callbacks.py  constitutive.py  jacobi_svd.py  morton.py  p2g_scan.py  solver.py  warp_bonus.py  warp_p2g.py
mpm_jax/cuda/: p2g_cuda.py
mpm_jax/cuda/_lib/: __init__.py
mpm_jax/cuda/kernels/: Makefile  g2p_fused.cu  p2g_inline.cu  p2g_v2_inline.cu  p2g_v3_inline.cu  p2g_v4_inline.cu
scripts/: bench_sort_overhead.py  check_v3_equivalence.py  check_v4_equivalence.py
tests/: test_cuda_equivalence.py  test_cuda_ffi_loader.py  test_cuda_v2_inline_matches_v1.py  test_integration.py  test_jax_v1_5.py  test_warp_bonus_matches_jax.py  test_warp_v1_inline_matches_cuda.py  test_warp_v2_tile_matches_v1.py  test_warp_v3_supercell_tile_matches_v1.py
