[build-system]
requires = ["scikit-build-core>=0.10", "cmake>=3.24", "jax>=0.4.20"]
build-backend = "scikit_build_core.build"

[project]
name = "mpm-cudajax"
version = "0.1.0"
requires-python = ">=3.10"
description = "MLS-MPM benchmark: JAX/XLA vs hand-written CUDA"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf",
    "matplotlib",
    "tqdm",
    "numpy",
    "wandb",
]

[tool.scikit-build]
# Auto-rebuild the .so files on import when .cu sources change in editable mode.
build-dir = "build/{wheel_tag}"
wheel.packages = ["mpm_jax"]
editable.rebuild = true
editable.verbose = false
# CUDA build is best-effort: when nvcc is missing CMake `return()`s and the
# wheel installs cleanly without kernels.
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
name = "mpm-cudajax"
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
hydra-core = ">=1.3"
omegaconf = "*"
matplotlib = "*"
tqdm = "*"
numpy = "*"
wandb = "*"
cmake = ">=3.24"
scikit-build-core = ">=0.10"
ninja = "*"

[tool.pixi.pypi-dependencies]
mpm-cudajax = { path = ".", editable = true }

[tool.pixi.feature.cpu.dependencies]
jax = ">=0.4.20"
jaxlib = ">=0.4.20"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.pixi.environments]
default = { features = ["cpu", "dev"], solve-group = "cpu" }
