[build-system]
requires = ["scikit-build-core>=0.10", "cmake>=3.24", "jax>=0.4.20"]
build-backend = "scikit_build_core.build"

[project]
name = "mpm-cudajax"
version = "0.1.0"
requires-python = ">=3.10"
description = "MLS-MPM benchmark: JAX/XLA vs hand-written CUDA"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf",
    "matplotlib",
    "tqdm",
    "numpy",
    "wandb",
]

[tool.scikit-build]
# Auto-rebuild the .so files on import when .cu sources change in editable mode.
build-dir = "build/{wheel_tag}"
wheel.packages = ["mpm_jax"]
editable.rebuild = true
editable.verbose = false
# CUDA build is best-effort: when nvcc is missing CMake `return()`s and the
# wheel installs cleanly without kernels.
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
name = "mpm-cudajax"
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
hydra-core = ">=1.3"
omegaconf = "*"
matplotlib = "*"
tqdm = "*"
numpy = "*"
wandb = "*"
cmake = ">=3.24"
scikit-build-core = ">=0.10"
ninja = "*"
seaborn = ">=0.13.2,<0.14"
pandas = ">=3.0.3,<4"

[tool.pixi.pypi-dependencies]
mpm-cudajax = { path = ".", editable = true }

[tool.pixi.feature.cpu.dependencies]
jax = ">=0.4.20"
jaxlib = ">=0.4.20"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.pixi.feature.gpu]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.feature.gpu.dependencies]
jax = ">=0.4.20"
jaxlib = { version = ">=0.4.20", build = "*cuda12*" }
cuda-version = "12.*"
cuda-nvcc = "*"
gxx = "*"

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

# Nsight profilers (nsys / ncu) for `simulate.py profile=nsys|ncu` are
# NOT shipped via conda — NVIDIA doesn't publish `nsight-systems` on
# conda-forge or the nvidia channel. Install them system-wide on the
# benchmark host:
#     sudo apt-get install nsight-systems nsight-compute
# Both end up on PATH and `simulate.py` picks them up from there.

[tool.pixi.environments]
default = { features = ["cpu", "dev"], solve-group = "cpu" }
gpu = { features = ["gpu", "dev"], solve-group = "gpu" }

[tool.pixi.tasks]
test = "pytest tests/ -v"
lint = "ruff check ."
clean = { cmd = "rm -f mpm_jax/cuda/_lib/*.so mpm_jax/cuda/kernels/*.so && rm -rf build multirun outputs output wandb && rm -f *.nsys-rep *.sqlite && find . -type d -name __pycache__ -exec rm -rf {} +" }

# Push the working tree to a remote host (e.g. `pixi run sync lambda`).
# Excludes generated dirs (.pixi, build, outputs, etc.) and arch-specific
# CUDA .so files — the remote rebuilds those on its own `pixi install -e gpu`.
sync = { args = [{ arg = "host" }], cmd = "rsync -ahz --info=stats1,name0 --exclude=.pixi --exclude=.venv --exclude=build --exclude=outputs --exclude=multirun --exclude=output --exclude=wandb --exclude=mpm_jax/cuda/_lib --exclude=__pycache__ --exclude='*.nsys-rep' --exclude='*.sqlite' --exclude='*.egg-info' --exclude=.pytest_cache ./ {{ host }}:~/MPM-CudaJax/" }

# Pull Hydra run outputs back from a remote host (e.g. `pixi run sync-results lambda`).
# One rsync with include/exclude rules so missing source dirs are silently skipped.
sync-results = { args = [{ arg = "host" }], cmd = "rsync -ahz --info=stats1,name0 --include='outputs/' --include='outputs/**' --include='multirun/' --include='multirun/**' --include='output/' --include='output/**' --exclude='*' {{ host }}:~/MPM-CudaJax/ ./" }

[tool.pixi.feature.gpu.tasks]
sim = "python simulate.py"
sweep = "python simulate.py -cn sweep_baseline"
sweep-quick = "python simulate.py -cn sweep_quick"
sweep-all = "python simulate.py -cn sweep_all"
rebuild-cuda = "pixi reinstall mpm-cudajax"
