[build-system]
requires = ["scikit-build-core>=0.10", "cmake>=3.24", "jax>=0.4.20"]
build-backend = "scikit_build_core.build"

[project]
name = "mpm-cudajax"
version = "0.1.0"
requires-python = ">=3.10"
description = "MLS-MPM benchmark: JAX/XLA vs hand-written CUDA"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf",
    "matplotlib",
    "tqdm",
    "numpy",
    "warp-lang",
    "pyvista",
]

[tool.scikit-build]
# Auto-rebuild the .so files on import when .cu sources change in editable mode.
build-dir = "build/{wheel_tag}"
wheel.packages = ["mpm_jax"]
editable.rebuild = true
editable.verbose = false
# CUDA build is best-effort: when nvcc is missing CMake `return()`s and the
# wheel installs cleanly without kernels.
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
name = "mpm-cudajax"
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
hydra-core = ">=1.3"
omegaconf = "*"
matplotlib = "*"
tqdm = "*"
numpy = "*"
cmake = ">=3.24"
scikit-build-core = ">=0.10"
ninja = "*"
seaborn = ">=0.13.2,<0.14"
pandas = ">=3.0.3,<4"
pyvista = "*"
imageio = "*"
# NOTE: `warp-lang` is intentionally NOT here. The conda-forge build pulls
# `jax` as a hard runtime dep, which would conflict with the hpc env's
# pypi-side `jax[cuda12-local]` (pixi can't apply pypi extras to a
# conda-installed jax). warp-lang is added per-feature below.

[tool.pixi.pypi-dependencies]
mpm-cudajax = { path = ".", editable = true }

[tool.pixi.pypi-options]
# Keep scikit-build-core editable builds tied to the Pixi environment instead
# of a temporary isolated build env. This is required for
# editable.rebuild=true to run incremental CMake rebuilds reliably on import.
no-build-isolation = ["mpm-cudajax"]

[tool.pixi.feature.cpu.dependencies]
jax = ">=0.4.20"
jaxlib = ">=0.4.20"
warp-lang = "*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.pixi.feature.gpu]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.feature.gpu.dependencies]
jax = ">=0.4.20"
jaxlib = { version = ">=0.4.20", build = "*cuda12*" }
cuda-version = "12.*"
cuda-nvcc = "*"
gxx = "*"
warp-lang = "*"

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

# HPC / module-system environment. Unlike `gpu` (which bundles a full
# conda-forge CUDA 12 stack), `hpc` brings NO CUDA libs of its own and
# instead relies on a site-provided CUDA toolkit loaded via `module load`
# (e.g. `module load nvhpc/24.1` on DTU). jax is installed from PyPI with
# the `cuda12-local` extras, which link against whatever libcuda /
# libcudart are on LD_LIBRARY_PATH at runtime. This avoids the common HPC
# failure mode where conda-forge ships CUDA 12.9 but the node's driver
# only supports 12.3, producing CUDA_ERROR_INVALID_IMAGE on the first jit.
#
# Workflow on the HPC node:
#     module load nvhpc/24.1            # provides nvcc + libcuda matched to driver
#     pixi install -e hpc               # builds .cu kernels with module's nvcc
#     pixi run -e hpc python simulate.py ...
[tool.pixi.feature.hpc]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.feature.hpc.dependencies]
gxx = "*"

[tool.pixi.feature.hpc.pypi-dependencies]
jax = { version = ">=0.4.20", extras = ["cuda12-local"] }
warp-lang = "*"
# cuDNN is not in NVHPC 24.1's tree on DTU's gracy, and jax[cuda12-local]
# checks for it at initialize() time. Pull the wheel from PyPI; it
# unpacks libcudnn.so.* into site-packages/nvidia/cudnn/lib/ and adds
# itself to the dlopen path automatically. Removes one site-specific
# LD_LIBRARY_PATH dance.
nvidia-cudnn-cu12 = "*"

[tool.pixi.environments]
default = { features = ["cpu", "dev"], solve-group = "cpu" }
gpu = { features = ["gpu", "dev"], solve-group = "gpu" }
hpc = { features = ["hpc", "dev"], solve-group = "hpc" }

[tool.pixi.tasks]
test = "pytest tests/ -v"
lint = "ruff check ."
clean = { cmd = "rm -f mpm_jax/cuda/_lib/*.so mpm_jax/cuda/kernels/*.so && rm -rf build multirun outputs output && rm -f *.sqlite && find . -type d -name __pycache__ -exec rm -rf {} +" }

# Push the working tree to a remote host (e.g. `pixi run sync lambda`).
# Excludes generated dirs (.pixi, build, outputs, etc.) and arch-specific
# CUDA .so files — the remote rebuilds those on its own `pixi install -e gpu`.
sync = { args = [{ arg = "host" }], cmd = "rsync -ahz --info=stats1,name0 --exclude=.pixi --exclude=.venv --exclude=build --exclude=outputs --exclude=multirun --exclude=output --exclude=mpm_jax/cuda/_lib --exclude=__pycache__ --exclude='*.sqlite' --exclude='*.egg-info' --exclude=.pytest_cache ./ {{ host }}:~/MPM-CudaJax/" }

# Pull Hydra run outputs back from a remote host (e.g. `pixi run sync-results lambda`).
# One rsync with include/exclude rules so missing source dirs are silently skipped.
sync-results = { args = [{ arg = "host" }], cmd = "rsync -ahz --info=stats1,name0 --include='outputs/' --include='outputs/**' --include='multirun/' --include='multirun/**' --include='output/' --include='output/**' --exclude='*' {{ host }}:~/MPM-CudaJax/ ./" }

[tool.pixi.feature.gpu.tasks]
sim = "python simulate.py"
sweep = "python simulate.py -cn sweep_baseline"
sweep-quick = "python simulate.py -cn sweep_quick"
sweep-all = "python simulate.py -cn sweep_all"

[tool.pixi.feature.hpc.tasks]
sim = "python simulate.py"
sweep = "python simulate.py -cn sweep_baseline"
sweep-quick = "python simulate.py -cn sweep_quick"
sweep-all = "python simulate.py -cn sweep_all"
